--- a/src/scss/additional-styles.scss
+++ b/src/scss/additional-styles.scss
@@ -101,3 +101,311 @@
 		}
 	}
 }
+.warranty {
+	@include adaptiveValue("padding-top", 60, 40);
+	@include adaptiveValue("margin-top", 40, 20);
+	border-top: 1px solid #cbcbcb;
+	&__documents-quality {
+		display: flex;
+		@include adaptiveValue("gap", 80, 30);
+		margin-bottom: 80px;
+	}
+	&__documents {
+		@include adaptiveValue("padding-top", 30, 0, 0, 1800, 1240);
+	}
+	&__documents-title {
+		@include adaptiveValue("margin-bottom", 38, 20);
+		@include adaptiveValue("font-size", 20, 18);
+		line-height: 1.5;
+		color: #000;
+	}
+	&__documents-item {
+		@include adaptiveValue("margin-bottom", 25, 15);
+	}
+	&__documents-link {
+		display: flex;
+		align-items: flex-start;
+		gap: 15px;
+		font-weight: 300;
+		font-size: 15px;
+		color: #000;
+		text-decoration: underline;
+		&:hover{
+			color: #0391A2;
+		}
+		img{
+			width: 17px;
+			height: 19px;
+			margin-top: -2px;
+		}
+	}
+	&__quality {
+		display: flex;
+	}
+	&__quality-left {
+		border-radius: 16px;
+		background: rgba(255, 255, 255, 0);
+		border: 1px solid #e1e1e1;
+		@include adaptiveValue("padding-top", 80, 30, 0, 1800, 1240);
+		@include adaptiveValue("padding-bottom", 80, 20, 0, 1800, 1240);
+		@include adaptiveValue("padding-left", 70, 25, 0, 1800, 1240);
+		@include adaptiveValue("padding-right", 70, 25, 0, 1800, 1240);
+		@include adaptiveValue("width", 580, 406, 0, 1800, 1240);
+		@include adaptiveValue("height", 345, 300, 0, 1800, 1240);
+	}
+	&__quality-title {
+		@include adaptiveValue("font-size", 20, 18);
+		@include adaptiveValue("margin-bottom", 40, 20);
+		line-height: 1.5;
+		color: #000;
+	}
+	&__quality-btn{
+		width: 220px;
+		height: 54px;
+		font-size: 16px;
+		color: #000;
+	}
+	&__quality-right {
+		@include adaptiveValue("width", 310, 260, 0, 1800, 1240);
+		@include adaptiveValue("height", 345, 300, 0, 1800, 1240);
+		@include adaptiveValue("padding-top", 70, 30, 0, 1800, 1240);
+		@include adaptiveValue("padding-left", 40, 25, 0, 1800, 1240);
+		@include adaptiveValue("padding-right", 40, 25, 0, 1800, 1240);
+		border-radius: 16px;
+		background: #42acb9;
+		position: relative;
+	}
+	&__quality-percent {
+		@include adaptiveValue("margin-bottom", 26, 15);
+		img{
+			width: 100%;
+			height: auto;
+		}
+	}
+	&__quality-button{
+		width: 100%;
+		height: 46px;
+		border-radius: 23px;
+		@include adaptiveValue("font-size", 16, 14);
+		padding: 0 10px;
+	}
+	&__quality-icon{
+		position: absolute;
+		bottom: -70px;
+		left: 50%;
+		margin-left: -50px;
+	}
+	&__shop {
+		border-top: 1px solid #cbcbcb;
+		margin-top: 100px;
+		@include adaptiveValue("padding-top", 50, 30);
+		@include adaptiveValue("margin-bottom", 70, 40);
+	}
+	&__shop-title {
+		@include adaptiveValue("font-size", 32, 24);
+		@include adaptiveValue("margin-bottom", 30, 20);
+		color: #000;
+	}
+	&__shop-list {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 15px;
+	}
+	&__shop-item {
+		@include adaptiveValue("padding", 40, 15, 0, 1800, 1280);
+		border-radius: 16px;
+		background: rgba(255, 255, 255, 0);
+		border: 1px solid #e1e1e1;
+		display: flex;
+		justify-content: space-between;
+		gap: 15px;
+	}
+	&__shop-count {
+		@include adaptiveValue("margin-bottom", 24, 15);
+		display: flex;
+		align-items: center;
+	}
+	&__shop-for {
+		@include adaptiveValue("font-size", 20, 16);
+		line-height: 1.5;
+		color: #000;
+	}
+	&__shop-image {
+		@include adaptiveValue("width", 250, 140, 0, 1800, 1280);
+		text-align: right;
+		display: flex;
+		align-items: center;
+		img{
+			height: auto;
+			width: auto;
+			max-width: 100%;
+		}
+	}
+	&__shop-2cols{
+		@include adaptiveValue("margin-top", 70, 40);
+		@include adaptiveValue("margin-bottom", 70, 40);
+		@include adaptiveValue("padding-bottom", 60, 30);
+		border-bottom: 1px solid #cbcbcb;
+		font-weight: 300;
+		font-size: 15px;
+		line-height: 26px;
+		color: #000;
+		display: flex;
+		@include adaptiveValue("gap", 40, 25);
+		p{
+			@include adaptiveValue("margin-bottom", 30, 15);
+		}
+	}
+	&__shop-2cols-title{
+		font-size: 20px;
+		color: #000;
+		@include adaptiveValue("margin-bottom", 30, 15);
+	}
+	&__content {
+		@include adaptiveValue("margin-top", 60, 40);
+		@include adaptiveValue("margin-bottom", 60, 40);
+		@include adaptiveValue("padding-bottom", 60, 40);
+		border-bottom: 1px solid #cbcbcb;
+		font-weight: 300;
+		font-size: 15px;
+		line-height: 1.4;
+		color: #000;
+		p{
+			margin-bottom: 20px;
+		}
+		a{
+			color: #0391a2;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+	}
+	&__content-title {
+		@include adaptiveValue("font-size", 32, 24);
+		color: #232323;
+		margin-bottom: 30px;
+	}
+	&__content-list {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 15px;
+		margin-top: 50px;
+		margin-bottom: 35px;
+	}
+	&__content-item {
+		border-radius: 16px;
+		background: rgba(255, 255, 255, 0);
+		border: 1px solid #e1e1e1;
+		padding: 50px 30px 30px 30px;
+		display: flex;
+		justify-content: space-between;
+		gap: 20px;
+	}
+	&__content-item-content {
+		min-height: 200px;
+		display: flex;
+		flex-direction: column;
+		ul li {
+			padding-left: 6px;
+			margin-bottom: 10px;
+		}
+		ul li::before {
+			content: "\2022";
+			color: #5c99b5;
+			font-weight: bold;
+			display: inline-block;
+			width: 6px;
+			margin-left: -6px;
+			margin-right: 5px;
+		}
+	}
+	&__content-item-title {
+		font-size: 20px;
+		font-weight: 400;
+		color: #000;
+		margin-bottom: 20px;
+	}
+	&__content-item-image {
+		width: 95px;
+		height: 95px;
+		background: #f6f6f6;
+		border-radius: 50%;
+		align-self: flex-end;
+		flex-shrink: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__content-download{
+		font-size: 15px;
+		display: flex;
+		align-items: center;
+		gap: 15px;
+		margin: 30px 0 0;
+	}
+	&__content-attention{
+		font-size: 13px;
+		color: #000;
+		font-weight: 400;
+		display: flex;
+		align-items: center;
+		gap: 15px;
+		margin-top: auto;
+	}
+	@media (max-width: 1240px) {
+		&__documents-quality {
+			flex-direction: column;
+		}
+		&__quality-left {
+			height: auto !important;
+			width: calc(100vw - 300px) !important;
+		}
+		&__quality-right {
+			height: auto !important;
+			width: 300px !important;
+			min-height: 300px;
+			padding-bottom: 100px !important;
+		}
+		&__shop-list {
+			grid-template-columns: repeat(2, 1fr);
+		}
+		&__content-list {
+			grid-template-columns: repeat(2, 1fr);
+		}
+	}
+	@media (max-width: $mobile) {
+		&__quality {
+			flex-direction: column;
+		}
+		&__quality-left {
+			width: 100% !important;
+		}
+		&__quality-right {
+			width: 100% !important;
+		}
+		&__shop-list {
+			grid-template-columns: repeat(1, 1fr);
+		}
+		&__shop-count span{
+			margin-right: 7px !important;
+		}
+		&__shop-image {
+			width: 100px !important;
+		}
+		&__shop-2cols{
+			flex-direction: column;
+		}
+		&__content-list {
+			grid-template-columns: repeat(1, 1fr);
+		}
+		&__content-item {
+			flex-direction: column;
+		}
+		&__content-item-content {
+			min-height: 0;
+		}
+		&__content-attention{
+			margin-top: 20px;
+		}
+	}
+}
