--- a/src/scss/additional-styles.scss
+++ b/src/scss/additional-styles.scss
@@ -160,7 +160,7 @@
 		color: #000;
 	}
 	&__quality-btn{
-		width: 220px;
+		width: 220px !important;
 		height: 54px;
 		font-size: 16px;
 		color: #000;
@@ -183,7 +183,7 @@
 		}
 	}
 	&__quality-button{
-		width: 100%;
+		width: 100% !important;
 		height: 46px;
 		border-radius: 23px;
 		@include adaptiveValue("font-size", 16, 14);
