--- a/src/scss/additional-styles.scss
+++ b/src/scss/additional-styles.scss
@@ -727,3 +727,42 @@
 		display: block;
 	}
 }
+.reviews-page{
+	&__add-feedback{
+		position: absolute;
+		right: 20px;
+		top: 0;
+		height: 45px;
+		@include adaptiveValue("width", 220, 160);
+	}
+	&__recommendations{
+		@include adaptiveValue("padding-top", 45, 30);
+		@include adaptiveValue("margin-top", 50, 30);
+		@include adaptiveValue("margin-bottom", 55, 35);
+		border-top: 1px solid #cbcbcb;
+	}
+	&__recommendations-title{
+		font-size: 20px;
+		color: #000;
+		margin-bottom: 22px;
+	}
+	&__recommendations-body{
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+		align-items: center;
+		img{
+			width: auto;
+			height: auto;
+		}
+	}
+	@media (max-width: $mobile) {
+		&__add-feedback{
+			position: relative;
+			right: auto;
+			top: auto;
+			margin-top: 15px;
+			width: 100% !important;
+		}
+	}
+}
