--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -2484,6 +2484,15 @@
 		@include adaptiveValue("width", 890, 280);
 		max-width: 100%;
 	}
+	&._no-slider{
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 18px;
+	}
+	&._no-slider &__slide{
+		width: 100%;
+		max-width: 100%;
+	}
 	&__header{
 		display: flex;
 		align-items: center;
@@ -2508,6 +2517,9 @@
 	@media (max-width:768px) {
 		&__all{
 			width: 100% !important;
+		}
+		&._no-slider{
+			grid-template-columns: repeat(1, 1fr);
 		}
 	}
 }
