--- a/src/scss/additional-styles.scss
+++ b/src/scss/additional-styles.scss
@@ -766,3 +766,194 @@
 		}
 	}
 }
+.delivery{
+	display: flex;
+	justify-content: space-between;
+	gap: 30px;
+	border-top: 1px solid #cbcbcb;
+	border-bottom: 1px solid #cbcbcb;
+	padding-top: 50px;
+	padding-bottom: 80px;
+	margin-top: 40px;
+	margin-bottom: 100px;
+	&__sidebar{
+		width: 312px;
+		flex-shrink: 0;
+		border-top: 4px solid #ffca1f;
+		padding-top: 50px;
+		a{
+			display: block;
+			margin-bottom: 35px;
+			font-size: 17px;
+			color: #000;
+			&._active{
+				color: #0391A2;
+			}
+		}
+	}
+	&__body{
+		width: 100%;
+		color: #000;
+		font-weight: 300;
+		font-size: 15px;
+		line-height: 26px;
+		h2{
+			font-size: 32px;
+			margin-bottom: 40px;
+		}
+		h3{
+			font-size: 20px;
+			margin-bottom: 30px;
+		}
+		p{
+			margin-bottom: 50px;
+			&._mb-25{
+				margin-bottom: 25px;
+			}
+		}
+		table{
+			border-collapse: collapse;
+			width: 100%;
+			margin-bottom: 40px;
+			thead{
+				background: #f8f8f8;
+				font-weight: 300;
+				font-size: 13px;
+				color: #a1a1a1;
+			}
+			td{
+				border: 1px solid #e1dfdf;
+				padding: 10px 30px;
+				height: 55px;
+			}
+		}
+	}
+	&__info{
+		display: flex;
+		gap: 30px;
+		img{
+			flex-shrink: 0;
+		}
+	}
+	@media (max-width: 1279px) {
+		flex-direction: column-reverse;
+		padding-top: 30px;
+		padding-bottom: 40px;
+		margin-top: 25px;
+		margin-bottom: 50px;
+		&__sidebar{
+			width: 100%;
+			padding-top: 30px;
+			a{
+				margin-bottom: 15px;
+				font-size: 15px;
+			}
+		}
+	}
+	@media (max-width: $mobile) {
+		&__body{
+			font-size: 14px;
+			line-height: 20px;
+			h2{
+				font-size: 26px;
+				margin-bottom: 25px;
+			}
+			h3{
+				font-size: 18px;
+				margin-bottom: 20px;
+			}
+			p{
+				margin-bottom: 30px;
+				&._mb-25{
+					margin-bottom: 15px;
+				}
+			}
+			table{
+				margin-bottom: 20px;
+				td{
+					padding: 10px 15px;
+					height: 40px;
+				}
+			}
+		}
+	}
+}
+.free-delivery{
+	border-radius: 16px;
+	background: url('../img/content/free-delivery__bg.png') 0 0 no-repeat #005d5c;
+	background-size: cover;
+	width: 100%;
+	min-height: 400px;
+	padding: 20px 58px;
+	display: flex;
+	justify-content: space-between;
+	gap: 30px;
+	color: #fff;
+	font-size: 13px;
+	line-height: 22px;
+	margin-bottom: 45px;
+	&__content{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		max-width: 500px;
+		width: 100%;
+		flex-shrink: 0;
+	}
+	&__title{
+		font-weight: bold;
+		font-size: 25px;
+		line-height: 32px;
+		color: #ffca1f;
+		max-width: 400px;
+		margin-bottom: 12px;
+	}
+	&__subtitle{
+		font-weight: 500;
+		font-size: 15px;
+		line-height: 22px;
+		color: #fff;
+		max-width: 400px;
+		margin-bottom: 22px;
+	}
+	&__list-cities{
+		max-width: 400px;
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+		justify-content: space-between;
+		margin-bottom: 30px;
+	}
+	&__detail{
+		display: flex;
+		align-items: center;
+		gap: 27px;
+		span{
+			max-width: 420px;
+			font-weight: 300;
+			font-size: 10px;
+			line-height: 16px;
+			color: #fff;
+		}
+	}
+	&__detail-link{
+		flex-shrink: 0;
+	}
+	&__image{
+		display: flex;
+		align-items: center;
+		img{
+			width: 100%;
+			height: auto;
+		}
+	}
+	@media (max-width: 768px) {
+		padding: 30px;
+		&__content{
+			max-width: 100%;
+		}
+		&__image{
+			display: none;
+		}
+	}
+}
