--- a/src/scss/additional-styles.scss
+++ b/src/scss/additional-styles.scss
@@ -1216,3 +1216,301 @@
 		display: none !important;
 	}
 }
+.cabinet{
+	&__heading{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		@include adaptiveValue("padding-bottom", 35, 25);
+		@include adaptiveValue("margin-bottom", 45, 35);
+	}
+	& ._bd-grey{
+		border-bottom: 1px solid #cbcbcb;
+	}
+	&__log-in-out{
+		font-size: 15px;
+		color: #000;
+		display: flex;
+		align-items: center;
+		grid-gap: 17px;
+	}
+	&__confirm{
+		border-radius: 16px;
+		background: #fff;
+		box-shadow: 15px 15px 55px rgba(0, 0, 0, 0.15);
+		@include adaptiveValue("margin-top", 45, 35, 0, 1800, 1280);
+		@include adaptiveValue("margin-bottom", 50, 40, 0, 1800, 1280);
+		display: flex;
+		align-items: center;
+		@include adaptiveValue("grid-gap", 80, 20, 0, 1800, 1280);
+		padding: 25px 35px;
+	}
+	&__confirm-message{
+		@include adaptiveValue("max-width", 666, 580, 0, 1800, 1280);
+		width: 100%;
+		flex-shrink: 0;
+		display: flex;
+		align-items: center;
+		@include adaptiveValue("grid-gap", 25, 15, 0, 1800, 1280);
+		line-height: 1.3;
+	}
+	&__confirm-message-title{
+		@include adaptiveValue("font-size", 20, 17, 0, 1800, 1280);
+		color: #000;
+	}
+	&__confirm-message-subtitle{
+		@include adaptiveValue("font-size", 16, 14, 0, 1800, 1280);
+		font-weight: 300;
+		color: #000;
+	}
+	&__confirm-send{
+		@include adaptiveValue("font-size", 16, 14, 0, 1800, 1280);
+		@include adaptiveValue("padding-left", 80, 20, 0, 1800, 1280);
+		border-left: 1px solid #cbcbcb;
+		font-weight: 300;
+		flex-shrink: 0;
+	}
+	&__confirm-send-question{
+		margin-bottom: 10px;
+	}
+	&__confirm-send-again{
+		color: #0391a2;
+		font-weight: 400;
+		text-decoration: underline;
+		&:hover{
+			text-decoration: none;
+		}
+	}
+	&__confirm-bonus{
+		margin-left: auto;
+		width: 100%;
+		max-width: 610px;
+	}
+	&__confirm-bonus-button{
+		@include adaptiveValue("font-size", 20, 16, 0, 1800, 1280);
+		width: 100%;
+		height: 80px;
+		border-radius: 32px;
+		background-color: #44adba;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		grid-gap: 17px;
+		padding: 0 20px;
+		color: #fff;
+		transition: all 0.3s;
+		&:hover{
+			background-color: #0391a2;
+		}
+	}
+	&__list-sections{
+		display: flex;
+		flex-wrap: wrap;
+		grid-gap: 26px;
+	}
+	&__section{
+		border-radius: 16px;
+		background: #f8f8f8;
+		border: 1px solid #e1e1e1;
+		@include adaptiveValue("padding", 40, 15);
+		width: calc(50% - 13px);
+		position: relative;
+	}
+	&__section-head{
+		display: flex;
+		align-items: center;
+		@include adaptiveValue("grid-gap", 18, 10);
+		@include adaptiveValue("margin-bottom", 30, 15);
+	}
+	&__section-head-image{
+		width: 28px;
+	}
+	&__section-head-name{
+		@include adaptiveValue("font-size", 26, 18);
+		line-height: 1.9;
+		color: #000;
+	}
+	&__section-head-link{
+		@include adaptiveValue("font-size", 16, 14);
+		font-weight: 300;
+		line-height: 1.8;
+		color: #0391a2;
+		text-decoration: underline;
+		margin-left: auto;
+		&:hover{
+			text-decoration: none;
+		}
+	}
+	&__section-bonus{
+		border-top: 1px solid #cbcbcb;
+		@include adaptiveValue("padding-top", 30, 15);
+	}
+	&__section-bonus-line{
+		display: flex;
+		align-items: center;
+		grid-gap: 30px;
+		padding-bottom: 15px;
+		margin-bottom: 15px;
+		border-bottom: 1px solid #cbcbcb;
+		&:last-child{
+			border-bottom: none;
+		}
+	}
+	&__section-bonus-count{
+		font-size: 28px;
+		line-height: 1.8px;
+		color: #000;
+		&._active{
+			color: #0391a2;
+		}
+	}
+	&__section-bonus-text{
+		font-weight: 300;
+		font-size: 16px;
+		line-height: 1.6;
+		color: #000;
+	}
+	&__section-orders{
+		border-top: 1px solid #cbcbcb;
+		@include adaptiveValue("padding-top", 30, 15);
+		position: relative;
+	}
+	&__section-orders-line{
+		display: flex;
+		align-items: center;
+		grid-gap: 30px;
+		padding-bottom: 15px;
+		margin-bottom: 15px;
+		border-bottom: 1px solid #cbcbcb;
+		&:last-child{
+			border-bottom: none;
+		}
+	}
+	&__section-orders-col{
+		font-weight: 300;
+		font-size: 16px;
+		line-height: 1.9;
+		color: #000;
+		&._fw-400{
+			font-weight: 400;
+		}
+	}
+	&__section-profile{
+		color: #000;
+	}
+	&__section-profile-name{
+		@include adaptiveValue("font-size", 20, 18);
+		line-height: 1.5;
+		margin-bottom: 20px;
+	}
+	&__section-profile-line{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		grid-gap: 15px;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 1.3;
+		margin-bottom: 10px;
+	}
+	&__section-offer{
+		overflow: hidden;
+		width: 100%;
+	}
+	&__section-offer__slide{
+		display: flex;
+		grid-gap: 30px;
+	}
+	&__section-offer-image{
+		border-radius: 16px;
+		background: #fff;
+		border: 1px solid #e1e1e1;
+		overflow: hidden;
+		width: 250px;
+		height: 164px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__section-offer-name{
+		font-weight: 500;
+		font-size: 15px;
+		line-height: 1.35;
+		color: #000;
+		margin-bottom: 20px;
+	}
+	&__section-offer-button button{
+		font-size: 16px !important;
+		@include adaptiveValue("width", 200, 160);
+		@include adaptiveValue("height", 50, 40);
+	}
+	&__section-offer-prev{
+		top: auto;
+		bottom: -10px !important;
+		right: 60px !important;
+		left: auto !important;
+	}
+	&__section-offer-next{
+		top: auto;
+		bottom: -10px !important;
+		right: 10px !important;
+	}
+	.basket__product-price{
+		text-align: left;
+		margin-bottom: 20px;
+	}
+	@media (max-width: 1380px){
+		&__section-offer__slide{
+			grid-gap: 20px;
+		}
+		.basket__product-price{
+			gap: 10px;
+		}
+		.basket__product-price-current{
+			font-size: 18px;
+		}
+	}
+	@media (max-width: 1280px){
+		&__section{
+			width: 100%;
+		}
+	}
+	@media (max-width: 1180px){
+		&__confirm{
+			flex-wrap: wrap;
+		}
+		&__confirm-send{
+			margin-left: auto;
+		}
+		&__confirm-bonus{
+			max-width: 100%;
+		}
+	}
+	@media (max-width: 880px){
+		&__confirm{
+			padding: 20px;
+		}
+		&__confirm-send{
+			width: 100%;
+			order: 2;
+		}
+	}
+	@media (max-width: 768px){
+		&__section-orders-line{
+			grid-gap: 20px;
+			flex-wrap: wrap;
+			align-items: flex-start;
+		}
+		&__section-orders-col{
+			font-size: 14px;
+			width: calc(50% - 10px);
+		}
+		&__section-offer__slide{
+			flex-wrap: wrap;
+		}
+		&__section-offer-image{
+			width: 100%;
+			height: 180px;
+		}
+	}
+}
